tinyc/test/good/ptr-from-voidptr-from-int.c
int main()
{
    int *p = ( void * ) 0xf000u;

    return 0;
}
