tinyc/test/bad/ptr-to-void-preinc.c
int main()
{
    int a[2];
    void *p = a;

    ++p;

    return 0;
}
